2017-08-18  Ryosuke Niwa  <rniwa@webkit.org>

        REGRESSION(r219640): Speedometer no longer runs on Safari 7
        https://bugs.webkit.org/show_bug.cgi?id=175749

        Reviewed by Joseph Pecoraro.

        Use regular string instead of template literal to make the script compatible with older versions of Safari.

        * Speedometer/resources/benchmark-runner.js:
        (BenchmarkRunner.prototype._runTest):

2017-08-17  Mathias Bynens  <mathias@qiwi.be>

        Speedometer: Update to modern Vue.js version
        https://bugs.webkit.org/show_bug.cgi?id=175660

        Reviewed by Ryosuke Niwa.

        * Speedometer/resources/todomvc/architecture-examples/vuejs-cli/README.md: Documented build process.
        * Speedometer/resources/todomvc/architecture-examples/vuejs-cli/config/index.js: Forced relative URLs to avoid breaking the interactive runner.
        * Speedometer/resources/todomvc/architecture-examples/vuejs-cli/dist/*: Updated per build steps.
        * Speedometer/resources/todomvc/architecture-examples/vuejs-cli/package-lock.json: Added to pin dependencies and make builds deterministic.
        * Speedometer/resources/todomvc/architecture-examples/vuejs-cli/package.json: Update to modern Vue.js version.
        * Speedometer/resources/todomvc/architecture-examples/vuejs-cli/src/components/Todos.vue: Fix markup error.

2017-08-17  Mathias Bynens  <mathias@qiwi.be>

        Speedometer: Update to modern React/Redux version
        https://bugs.webkit.org/show_bug.cgi?id=175669

        Reviewed by Ryosuke Niwa.

        * Speedometer/resources/todomvc/architecture-examples/react-redux/README.md: Documented build steps.
        * Speedometer/resources/todomvc/architecture-examples/react-redux/dist/*: Updated per build instructions.
        * Speedometer/resources/todomvc/architecture-examples/react-redux/package-lock.json: Pinned dependencies to make builds deterministic.