@@ -1,3 +1,15 @@
+2017-08-22  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Speedometer 2.0: Add button to select and unselect all tests to InteractiveRunner.html
+        https://bugs.webkit.org/show_bug.cgi?id=175816
+
+        Reviewed by Saam Barati.
+
+        Added buttons to select and unselect all subtests to aid debugging.
+
+        * Speedometer/InteractiveRunner.html:
+        (createUIForSuites):
+
 2017-08-18  Ryosuke Niwa  <rniwa@webkit.org>
 
         REGRESSION(r219640): Speedometer no longer runs on Safari 7
